# matrix-hal-examples

./: CMakeLists.txt  LICENSE  README.md
everloop/: CMakeLists.txt  everloop_green.cpp  everloop_moving_dots.cpp  everloop_rainbow.cpp  everloop_yellow_purple.cpp
gpio/: CMakeLists.txt  gpio_io.cpp  gpio_pwm.cpp  gpio_servo.cpp
microphone_array/: CMakeLists.txt  asound.conf  mic_record_file.cpp  mic_record_pipe.cpp  mic_record_pipe.out
sensors/: CMakeLists.txt  humidity_sensor.cpp  imu_sensor.cpp  pressure_sensor.cpp  uv_sensor.cpp
